# multibody-pogos

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/: core.hpp
include/mbd/: constraint.hpp  core.hpp  dynamics.hpp  force_element.hpp  joint.hpp  math.hpp  rigid_body.hpp  solver.hpp  system.hpp
python/: CMakeLists.txt  pycore.cpp
src/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  test_constraints.cpp  test_core.cpp  test_core_types.cpp  test_force_elements.cpp  test_joints.cpp  test_math.cpp  test_rigid_body.cpp  test_rigid_body_dynamics.cpp  test_transform3.cpp
